# beam

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml  publish-homebrew-tap.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: CopyCommandCard.astro  CtaSection.astro  ExamplesSection.astro  FaqSection.astro  FeaturesSection.astro  HeroSection.astro  InstallSection.astro  SessionDocumentCard.astro  SiteFooter.astro  TopNav.astro  UsageSection.astro  WorkflowSection.astro
docs/src/data/: site.ts
docs/src/layouts/: BaseLayout.astro
docs/src/pages/: index.astro
docs/src/styles/: global.css
scripts/: render_homebrew_formula.py
src/: access.rs  cli.rs  content.rs  doctor.rs  download_page.rs  duration.rs  lib.rs  main.rs  provider.rs  relay.rs  relay_protocol.rs  session.rs  tls.rs  ui.rs
src/provider/: cloudflared.rs  native.rs  pinggy.rs  serveo.rs  ssh.rs
src/templates/: download_page.html
