[package]
name = "beam"
version = "0.1.0"
edition = "2024"
description = "Ephemeral terminal-first file sharing"
license = "MIT"
default-run = "beam"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
axum = { version = "0.8.6", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
clap_complete = "4.5.58"
futures-util = { version = "0.3.31", features = ["io"] }
hex = "0.4.3"
humantime = "2.3.0"
indicatif = "0.18.0"
qrcode = "0.14.1"
rand = "0.8.5"
regex = "1.11.3"
rcgen = "0.14.7"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.16", features = ["compat", "io", "rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
